Delay display initialization to avoid losing event timestamp

Should fix a new window not receiving focus when opening another
image from Nautilus.

https://bugzilla.gnome.org/show_bug.cgi?id=582931